manifests/k8s-dapr-event-watcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-event-watcher-service
  namespace: default
  labels:
    app: k8s-event-watcher
spec:
  type: ClusterIP
  selector:
    app: k8s-event-watcher
  ports:
    - name: websocket
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
