manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-websocket-service
  namespace: default
  labels:
    app: nodejs-websocket
spec:
  type: ClusterIP
  selector:
    app: nodejs-websocket
  ports:
    - name: websocket
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
