manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    nginx.org/websocket-services: "nodejs-websocket-service"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: nodejs-websocket.localhost
      http:
        paths:
        - pathType: Prefix
          path: /ws/
          backend:
            service:
              name: nodejs-websocket-service
              port:
                number: 8080
